get employees list endpoint added
